Commented name suffix and prefix and changed the application namespace to default to avoid issues or failures during kubernetes clusterip service calls

--- a/fleetmam-application-manifest-files/production/kustomization.yaml
+++ b/fleetmam-application-manifest-files/production/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 resources:
 - ../resources/
 
-namespace: fleetman-production
+namespace: default
 
-# namePrefix: FL-
-nameSuffix: -production
+# namePrefix: fa-
+# nameSuffix: -production
 
 commonLabels:
   application: fleetman-production
-  owner: subrahmanyam r
+  owner: subrahmanyam-r
 
 # configMapGenerator:
 # - name: production-configuration
