--- a/fleetmam-application-manifest-files/aws-production/storage.yaml
+++ b/fleetmam-application-manifest-files/aws-production/storage.yaml
@@ -4,8 +4,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: aws-storage-class
-#   annotations:
-#     storageclass.kubernetes.io/is-default-class: "true"
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
