--- a/fleetmam-application-manifest-files/resources/webapp-frontend.yaml
+++ b/fleetmam-application-manifest-files/resources/webapp-frontend.yaml
@@ -65,9 +65,6 @@ metadata:
   labels:
     app: webapp
   name: fleetman-webapp
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    service.beta.kubernetes.io/aws-load-balancer-cross-load-balancing-enabled: 'true'
 spec:
   ports:
   - name: "http"
@@ -76,6 +73,6 @@ spec:
     targetPort: 80
   selector:
     app: webapp
-  type: NodePort
+  type: ClusterIP
 status:
   loadBalancer: {}
